Changed stacks implementation from LinkedList to ArrayList.  Removed all PropertyTriplet references.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/FOP_0-20-0_Alt-Design@195257 13f79535-47bb-0310-9956-ffa450edef68